--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,3 +1,7 @@
+{%  load static %}
+
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -260,6 +264,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{% static "js/scripts.js" %}"></script>
     </body>
 </html>
