--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {%  load static %}
 
-{% block title %}{{ context }}{% endblock %}
+{% block title %}{{ content }}{% endblock %}
 
 {% block header %}
     <!-- Header -->
