--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,4 +1,5 @@
-{%  load static %}
+{% load static %}
+{% load goods_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,53 +15,62 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static "css/styles.css" %}" rel="stylesheet" />
+
+
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="{% url "main:index" %}">The Book Heaven</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url "main:index" %}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url "main:about" %}">About</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="shopDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
-                    <ul class="dropdown-menu" aria-labelledby="shopDropdown">
-                        <li><a class="dropdown-item" href="{% url "catalog:index" %}">New Arrivals</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        {% for category in categories %}
-                            <li><a class="dropdown-item" href="{% url "catalog:index" %}">{{category.name}}</a></li>
-                        {% endfor %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="{% url "main:index" %}">The Book Heaven</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url "main:index" %}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url "main:about" %}">About</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="shopDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
+                        <ul class="dropdown-menu" aria-labelledby="shopDropdown">
+                            <li><a class="dropdown-item" href="{% url "catalog:index" %}">New Arrivals</a></li>
+                            <li><hr class="dropdown-divider" /></li>
+                            {% tag_categories as categories %}
+                            {% for category in categories %}
+                                <li><a class="dropdown-item" href="{% url "catalog:index" %}">{{category.name}}</a></li>
+                            {% endfor %}
 
-                    </ul>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <!-- User-related dropdown -->
-                <li class="nav-item dropdown me-4">
-                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">User</a>
-                    <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li><a class="dropdown-item" href="{% url "admin:index" %}">Admin Panel</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#">Login</a></li>
-                    </ul>
-                </li>
-                <!-- Cart button -->
-                <li class="nav-item">
-                    <button class="btn btn-outline-dark" type="submit">
-                        <i class="bi-cart-fill me-1"></i>
-                        Cart
-                        <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                    </button>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+                        </ul>
+                    </li>
+                </ul>
+            <!-- Добавлено поле поиска и кнопка -->
+                <form class="d-flex" style="margin-right: 20px;">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-dark" type="submit">Search</button>
+                </form>
+
+                <ul class="navbar-nav">
+                    <!-- User-related dropdown -->
+                    <li class="nav-item dropdown me-4">
+                        <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">User</a>
+                        <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url "admin:index" %}">Admin Panel</a></li>
+                            <li><hr class="dropdown-divider" /></li>
+                            <li><a class="dropdown-item" href="#">Login</a></li>
+                        </ul>
+                    </li>
+                    <!-- Cart button -->
+                    <li class="nav-item">
+                        <button class="btn btn-outline-dark" type="submit">
+                            <i class="bi-cart-fill me-1"></i>
+                            Cart
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
 
 
         <!-- Header-->
@@ -85,5 +95,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static "js/scripts.js" %}"></script>
+            <!-- Your website content here -->
     </body>
 </html>
