--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -1,53 +1,55 @@
 {% extends 'main/base.html' %}
-{%  load static %}
+{% load static %}
 
 {% block title %}{{ context }}{% endblock %}
 
 {% block header %}
-<!-- Header -->
-<h1 class="display-4 fw-bolder">{{ content }}</h1>
-<p class="lead fw-normal text-white-50 mb-0">{{ description }}</p>
-<!-- Add more content as needed -->
+  <!-- Header -->
+  <h1 class="display-4 fw-bolder">{{ content }}</h1>
+  <p class="lead fw-normal text-white-50 mb-0">{{ description }}</p>
+  <!-- Add more content as needed -->
 {% endblock %}
-{% block content %}
 
-<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+{% block content %}
+  <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
     {% for product in goods %}
-    <div class="col mb-5">
-        <div class="card h-100">
-            <!-- Product image-->
-            {% if product.image %}
-                <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}"/>
-            {% else  %}
-                <img class="card-img-top" src="{% static "images/Not found image.png" %}" alt="..."/>
-            {% endif %}
-            <!-- Product details-->
-            <div class="card-body p-4">
-                <div class="text-center">
-                    <!-- Product name-->
-                    <a href="#!" class="text-decoration-none text-dark">
-                        <h5 class="fw-bolder">{{ product.name }}</h5>
-                        <p class="fw-light">by {{ product.author }}</p>
-                    </a>
-                    <!-- Product description-->
-                    <p class="card-text">{{ product.description }}</p>
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Sale badge-->
+                    {% if product.discount %}
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">{{ product.discount|floatformat:"0" }}% Sale</div>
+                    {% endif %}
+                    <!-- Product image-->
+                    {% if product.image %}
+                    <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}"/>
+                    {% else %}
+                    <img class="card-img-top" src="{% static 'images/Not found image.png' %}" alt="Image not found"/>
+                    {% endif %}
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <a href="{% url "catalog:product" product.display_id %}" class="text-decoration-none text-dark">
+                            <h5 class="fw-bolder">{{ product.name }}</h5>
+                            </a>
+                            <p class="fw-light">by {{ product.author }}</p>
+                            <!-- Product description-->
+                            <p class="mb-1">{{ product.description }}</p>
+                            <!-- Product price-->
+                            {% if product.discount %}
+                            <span class="text-muted text-decoration-line-through">{{ product.price }}$</span>
+                            {{ product.sell_price }}$
+                            {% else %}
+                            {{ product.price }}$
+                            {% endif %}
+                        </div>
+                    </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <!-- Product price-->
-                            <span class="fw-bold">{{ product.price }}$</span>
-                            <!-- Shopping cart icon instead of "Add to cart" text-->
-                            <a class="btn btn-outline-dark" href="#">
-                                <i class="bi bi-cart"></i> <!-- Bootstrap Icons cart icon -->
-                            </a>
-                        </div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    {% endfor %}
-</div>
-
-
+            {% endfor %}
+  </div>
 {% endblock %}
