--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -3,98 +3,99 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>{{ title }}</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static "css/styles.css" %}" rel="stylesheet" />
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>{{ title }}</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{% static "css/styles.css" %}" rel="stylesheet" />
+</head>
+<body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" href="{% url "main:index" %}">The Book Heaven</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url "main:index" %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url "main:about" %}">About</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="shopDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
+                    <ul class="dropdown-menu" aria-labelledby="shopDropdown">
+                        <li><a class="dropdown-item" href="{% url "catalog:index" %}">New Arrivals</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        {% tag_categories as categories %}
+                        {% for category in categories %}
+                            <li><a class="dropdown-item" href="{% url "catalog:index" %}">{{category.name}}</a></li>
+                        {% endfor %}
 
+                    </ul>
+                </li>
+            </ul>
+        <!-- Добавлено поле поиска и кнопка -->
+            <form class="d-flex" style="margin-right: 20px;">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark" type="submit">Search</button>
+            </form>
 
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{% url "main:index" %}">The Book Heaven</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url "main:index" %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url "main:about" %}">About</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="shopDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
-                        <ul class="dropdown-menu" aria-labelledby="shopDropdown">
-                            <li><a class="dropdown-item" href="{% url "catalog:index" %}">New Arrivals</a></li>
-                            <li><hr class="dropdown-divider" /></li>
-                            {% tag_categories as categories %}
-                            {% for category in categories %}
-                                <li><a class="dropdown-item" href="{% url "catalog:index" %}">{{category.name}}</a></li>
-                            {% endfor %}
-
-                        </ul>
-                    </li>
-                </ul>
-            <!-- Добавлено поле поиска и кнопка -->
-                <form class="d-flex" style="margin-right: 20px;">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-dark" type="submit">Search</button>
-                </form>
-
-                <ul class="navbar-nav">
-                    <!-- User-related dropdown -->
-                    <li class="nav-item dropdown me-4">
-                        <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">User</a>
-                        <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" href="{% url "admin:index" %}">Admin Panel</a></li>
-                            <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="#">Login</a></li>
-                        </ul>
-                    </li>
-                    <!-- Cart button -->
-                    <li class="nav-item">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </li>
-                </ul>
+            <ul class="navbar-nav">
+                <!-- User-related dropdown -->
+                <li class="nav-item dropdown me-4">
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">User</a>
+                    <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="{% url "admin:index" %}">Admin Panel</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="#">Login</a></li>
+                    </ul>
+                </li>
+                <!-- Cart button -->
+                <li class="nav-item">
+                    <button class="btn btn-outline-dark" type="submit">
+                        <i class="bi-cart-fill me-1"></i>
+                        Cart
+                        <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    </button>
+                </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+    <!-- Header-->
+    <header class="bg-dark py-5">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center text-white">
+                {% block header %}{% endblock %}
             </div>
-            </div>
-        </nav>
+        </div>
+    </header>
 
+    <!-- Section-->
+    <section class="py-5 flex-grow-1">
+        <div class="container px-4 px-lg-5 mt-5">
+            {% block content %}{% endblock %}
+        </div>
+    </section>
 
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    {% block header %}{% endblock %}
-                </div>
-            </div>
-        </header>
-        <!-- Section-->
-            <section class="py-5">
-                <div class="container px-4 px-lg-5 mt-5">
-                    {% block content %}{% endblock %}
-                </div>
-            </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="{% static "js/scripts.js" %}"></script>
-            <!-- Your website content here -->
-    </body>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark mt-auto">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="{% static "js/scripts.js" %}"></script>
+    <!-- Your website content here -->
+</body>
 </html>
