--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -85,6 +85,28 @@
         </div>
     </section>
 
+    <!-- Pagination-->
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
+          <a class="page-link" href="{% if goods.has_previous %}{% url 'catalog:index' slug_url goods.previous_page_number %}{% else %}#{% endif %}" aria-label="Previous">
+            &laquo; Previous
+          </a>
+        </li>
+        {% for page in goods.paginator.page_range %}
+          <li class="page-item {% if page == goods.number %}active{% endif %}">
+            <a class="page-link" href="{% url 'catalog:index' slug_url page %}">{{ page }}</a>
+          </li>
+        {% endfor %}
+        <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
+          <a class="page-link" href="{% if goods.has_next %}{% url 'catalog:index' slug_url goods.next_page_number %}{% else %}#{% endif %}" aria-label="Next">
+            Next &raquo;
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+
     <!-- Footer-->
     <footer class="py-5 bg-dark mt-auto">
         <div class="container">
