--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -94,9 +94,11 @@
           </a>
         </li>
         {% for page in goods.paginator.page_range %}
+        {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
           <li class="page-item {% if page == goods.number %}active{% endif %}">
             <a class="page-link" href="{% url 'catalog:index' slug_url page %}">{{ page }}</a>
           </li>
+        {% endif %}
         {% endfor %}
         <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
           <a class="page-link" href="{% if goods.has_next %}{% url 'catalog:index' slug_url goods.next_page_number %}{% else %}#{% endif %}" aria-label="Next">
@@ -105,6 +107,7 @@
         </li>
       </ul>
     </nav>
+
 
 
     <!-- Footer-->
