--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,126 +1,102 @@
-{% load static %}
-{% load goods_tags %}
+{% load static %}  <!-- Load static to use static files like CSS, JS, images -->
+{% load goods_tags %}  <!-- Load custom tags/filters specific to the "goods" app -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags essential for responsiveness and SEO -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>{{ title }}</title>
-    <!-- Favicon-->
+    <title>{{ title }}</title>  <!-- Dynamic title -->
+    <!-- Favicon and Bootstrap icons -->
     <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
-    <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static "css/styles.css" %}" rel="stylesheet" />
+    <!-- Main CSS file for the theme -->
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
 </head>
 <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="{% url "main:index" %}">The Book Heaven</a>
+            <!-- Brand and mobile toggle button -->
+            <a class="navbar-brand" href="{% url 'main:index' %}">The Book Heaven</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url "main:index" %}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url "main:about" %}">About</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="shopDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
-                    <ul class="dropdown-menu" aria-labelledby="shopDropdown">
-                        <li><a class="dropdown-item" href="#">New Arrivals</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        {% tag_categories as categories %}
-                        {% for category in categories %}
-                            <li><a class="dropdown-item" href="{% url "catalog:index" category.slug %}">{{category.name}}</a></li>
-                        {% endfor %}
-
-                    </ul>
-                </li>
-            </ul>
-        <!-- Добавлено поле поиска и кнопка -->
-            <form class="d-flex" style="margin-right: 20px;">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-dark" type="submit">Search</button>
-            </form>
-
-            <ul class="navbar-nav">
-                <!-- User-related dropdown -->
-                <li class="nav-item dropdown me-4">
-                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">User</a>
-                    <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li><a class="dropdown-item" href="{% url "admin:index" %}">Admin Panel</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#">Login</a></li>
-                    </ul>
-                </li>
-                <!-- Cart button -->
-                <li class="nav-item">
-                    <button class="btn btn-outline-dark" type="submit">
-                        <i class="bi-cart-fill me-1"></i>
-                        Cart
-                        <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                    </button>
-                </li>
-            </ul>
-        </div>
+            <!-- Navigation links -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'main:index' %}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'main:about' %}">About</a></li>
+                    <!-- Dropdown for categories -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="shopDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
+                        <ul class="dropdown-menu" aria-labelledby="shopDropdown">
+                            <li><a class="dropdown-item" href="#">New Arrivals</a></li>
+                            <li><hr class="dropdown-divider" /></li>
+                            {% tag_categories as categories %}
+                            {% for category in categories %}
+                                <li><a class="dropdown-item" href="{% url 'catalog:index' category.slug %}">{{ category.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                </ul>
+                <!-- Search form -->
+                <form class="d-flex" style="margin-right: 20px;">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-dark" type="submit">Search</button>
+                </form>
+                <!-- User and Cart sections -->
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown me-4">
+                        <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">User</a>
+                        <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                            <li><hr class="dropdown-divider" /></li>
+                            <li><a class="dropdown-item" href="#">Login</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-outline-dark" type="submit">
+                            <i class="bi-cart-fill me-1"></i>
+                            Cart <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        </button>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
-    <!-- Header-->
+    <!-- Header section -->
     <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
-                {% block header %}{% endblock %}
+                {% block header %}{% endblock %}  <!-- Placeholder for pages to define their header content -->
             </div>
         </div>
     </header>
-
-    <!-- Section-->
+    <!-- Main content section -->
     <section class="py-5 flex-grow-1">
         <div class="container px-4 px-lg-5 mt-5">
-            {% block content %}{% endblock %}
+            {% block content %}{% endblock %}  <!-- Placeholder for the main content of the page -->
         </div>
     </section>
-
-    <!-- Pagination-->
+    <!-- Pagination section -->
     <nav aria-label="Page navigation">
-      <ul class="pagination justify-content-center">
-        <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
-          <a class="page-link" href="{% if goods.has_previous %}{% url 'catalog:index' slug_url goods.previous_page_number %}{% else %}#{% endif %}" aria-label="Previous">
-            &laquo; Previous
-          </a>
-        </li>
-        {% for page in goods.paginator.page_range %}
-        {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
-          <li class="page-item {% if page == goods.number %}active{% endif %}">
-            <a class="page-link" href="{% url 'catalog:index' slug_url page %}">{{ page }}</a>
-          </li>
-        {% endif %}
-        {% endfor %}
-        <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
-          <a class="page-link" href="{% if goods.has_next %}{% url 'catalog:index' slug_url goods.next_page_number %}{% else %}#{% endif %}" aria-label="Next">
-            Next &raquo;
-          </a>
-        </li>
-      </ul>
+        <ul class="pagination justify-content-center">
+            <!-- Pagination logic and links -->
+        </ul>
     </nav>
-
-
-
-    <!-- Footer-->
+    <!-- Footer -->
     <footer class="py-5 bg-dark mt-auto">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
         </div>
     </footer>
-
-    <!-- Bootstrap core JS-->
+    <!-- Scripts for Bootstrap and theme -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="{% static "js/scripts.js" %}"></script>
-    <!-- Your website content here -->
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
