Simple search created

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -18,11 +18,13 @@
             Filters
         </button>
 
-        <form action="" method="get" class="dropdown-menu p-4 text-bg-dark">
+        <form action="{% if request.GET.q %}{% url "catalog:search" %}{% else %}{% url "catalog:index" slug_url %}{% endif %}" method="get" class="dropdown-menu p-4 text-bg-dark">
             <div class="mb-3">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="on_sale" id="saleCheck" value="on" {% if request.GET.on_sale == 'on' %}checked{% endif %}>
-                    {% comment %}<input type="hidden" name="q" value="{{ request.GET.q }}">{% endcomment %}
+                    {% if request.GET.q %}
+                        <input type="hidden" name="q" value="{{ request.GET.q }}">
+                    {% endif %}
                     <label class="form-check-label" for="saleCheck">
                         Sale Items
                     </label>
