--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -13,9 +13,9 @@
                     <div class="card-body">
                         <p class="product-id">ID: {{ product.id }}</p>
                         <h2 class="card-title">{{ product.name }}</h2>
-                        <p class="card-text"><strong>Цена:</strong> {{ product.price }} $</p>
+                        <p class="card-text"><strong>Price:</strong> {{ product.price }} $</p>
                         <p class="card-text">{{ product.description }}</p>
-                        <a href="#" class="btn btn-dark add-to-cart">Добавить в корзину</a>
+                        <a href="#" class="btn btn-dark add-to-cart">Add to cart</a>
                     </div>
                 </div>
             </div>
