--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% load goods_tags %}
 
@@ -56,24 +56,24 @@
     </div>
 
     {% if request.GET.q %}
-        <div class="container mt-4">
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12">
+                <div class="alert alert-info text-center" role="alert">
+                    <h4 class="alert-heading">Search Results for "{{ request.GET.q|capfirst }}"</h4>
+                </div>
+            </div>
+        </div>
+        {% if not goods %}
             <div class="row">
                 <div class="col-12">
-                    <div class="alert alert-info text-center" role="alert">
-                        <h4 class="alert-heading">Search Results for "{{ request.GET.q|capfirst }}"</h4>
+                    <div class="alert alert-warning text-center" role="alert">
+                        <h5 class="alert-heading">No results found.</h5>
                     </div>
                 </div>
             </div>
-            {% if not goods %}
-                <div class="row">
-                    <div class="col-12">
-                        <div class="alert alert-warning text-center" role="alert">
-                            <h5 class="alert-heading">No results found.</h5>
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
-        </div>
+        {% endif %}
+    </div>
     {% endif %}
 
   <!-- Main content block for displaying products -->
@@ -113,7 +113,7 @@
                         <p class="mb-1">
                             {% autoescape off %}
                                 {% if product.bodyline %}
-                                {{ product.bodyline|truncatechars:100 }}
+                                {{ product.bodyline|truncatechars:150 }}
                                 {% else %}
                                 {{ product.description|truncatechars:50 }}
                                 {% endif %}
@@ -139,7 +139,7 @@
     <!-- Pagination section -->
     {% if goods %}
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination justify-content-center my-4">
             <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
                  <a class="page-link" href="{% if goods.has_previous %}?page={{goods.previous_page_number}}{% else %}#{% endif %}">
                     &laquo; Previous
