Completed registration form and controller are ready

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,18 +52,27 @@
                         </button>
                     </div>
                 </form>
-                <!-- User and Cart sections -->
+                <!--Sign In, User and Cart sections -->
                 <ul class="navbar-nav">
+                    {% if not user.is_authenticated%}
+                    <li class="nav-item me-4">
+                        <a class="btn btn-outline-dark" href="{% url 'users:login' %}">
+                            <i class="bi bi-box-arrow-in-right me-1"></i> Sign In
+                        </a>
+                    </li>
+                    {% else %}
                     <li class="nav-item dropdown me-4">
                         <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">User</a>
                         <ul class="dropdown-menu" aria-labelledby="userDropdown">
                             <li><a class="dropdown-item" href="{% url 'users:profile' %}">Profile</a></li>
+                            {% if user.is_superuser or user.is_staff %}
                             <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                            {% endif %}
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="{% url 'users:login' %}">Login</a></li>
                             <li><a class="dropdown-item" href="{% url 'users:logout' %}">Logout</a></li>
                         </ul>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
