--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -6,31 +6,71 @@
     <div class="row justify-content-center">
         <div class="col-md-9 bg-light p-5 mb-5 rounded shadow-sm">
             <h2 class="display-6 text-center mb-4">Registration</h2>
-            <form>
+            <form action="{% url 'user:registration' %}" method="post">
+                {% csrf_token %}
                 <div class="row g-3">
                     <div class="col-md-6">
-                        <label for="firstName" class="form-label">First Name*</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
+                        <label for="id_first_name" class="form-label">First Name*</label>
+                        <input type="text" class="form-control" id="id_first_name"
+                               value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}"
+                               name="first_name"
+                               placeholder="Enter your first name" required>
+                        {% if form.first_name.errors %}
+                        <div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>
+                        {% endif %}
                     </div>
                     <div class="col-md-6">
-                        <label for="lastName" class="form-label">Last Name*</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required>
+                        <label for="id_last_name" class="form-label">Last Name*</label>
+                        <input type="text" class="form-control" id="id_last_name"
+                               value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}"
+                               name="last_name"
+                               placeholder="Enter your last name" required>
+                        {% if form.last_name.errors %}
+                        <div class="alert alert-danger alert-dismissible fade show">{{ form.last_name.errors }}</div>
+                        {% endif %}
                     </div>
                     <div class="col-md-6">
-                        <label for="username" class="form-label">Username*</label>
-                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+                        <label for="id_username" class="form-label">Username*</label>
+                        <input type="text" class="form-control" id="id_username"
+                               value="{% if form.username.value %}{{ form.username.value }}{% endif %}"
+                               name="username"
+                               placeholder="Enter your username" required>
+                        {% if form.first_name.errors %}
+                        <div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>
+                        {% endif %}
+                        {% if form.username.errors %}
+                        <div class="alert alert-danger alert-dismissible fade show">{{ form.username.errors }}</div>
+                        {% endif %}
                     </div>
                     <div class="col-md-6">
-                        <label for="email" class="form-label">Email*</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                        <label for="id_email" class="form-label">Email*</label>
+                        <input type="email" class="form-control" id="id_email"
+                               value="{% if form.email.value %}{{ form.email.value }}{% endif %}"
+                               name="email"
+                               placeholder="Enter your email" required>
+                        {% if form.email.errors %}
+                        <div class="alert alert-danger alert-dismissible fade show">{{ form.email.errors }}</div>
+                        {% endif %}
                     </div>
                     <div class="col-md-6">
-                        <label for="password1" class="form-label">Password*</label>
-                        <input type="password" class="form-control" id="password1" placeholder="Enter password" required>
+                        <label for="id_password1" class="form-label">Password*</label>
+                        <input type="password" class="form-control" id="id_password1"
+                               value="{% if form.password1.value %}{{ form.password1.value }}{% endif %}"
+                               name="password1"
+                               placeholder="Enter password" required>
+                        {% if form.password1.errors %}
+                        <div class="alert alert-danger alert-dismissible fade show">{{ form.password1.errors }}</div>
+                        {% endif %}
                     </div>
                     <div class="col-md-6">
-                        <label for="password2" class="form-label">Confirm Password*</label>
-                        <input type="password" class="form-control" id="password2" placeholder="Confirm password" required>
+                        <label for="id_password2" class="form-label">Password*</label>
+                        <input type="password" class="form-control" id="id_password2"
+                               value="{% if form.password2.value %}{{ form.password2.value }}{% endif %}"
+                               name="password2"
+                               placeholder="Enter password" required>
+                        {% if form.password2.errors %}
+                        <div class="alert alert-danger alert-dismissible fade show">{{ form.password2.errors }}</div>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="text-center mt-4">
