--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -8,26 +8,65 @@
         <div class="col-md-5">
             <div class="bg-light p-4 mb-5 rounded shadow-sm">
                 <h3 class="text-center mb-4">User Profile</h3>
-                <form>
+                <form action="{% url 'user:profile' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
                     <div class="mb-3 text-center">
+                        {% if user.image %}
+                         <img src="{{ user.image.url }}" alt="User Avatar" class="img-fluid rounded-circle mb-3" style="max-width: 150px;">
+                        {% else %}
                         <img src="{% static 'images/baseavatar.jpg' %}" alt="User Avatar" class="img-fluid rounded-circle mb-3" style="max-width: 150px;">
-                        <input type="file" class="form-control" id="avatar" accept="image/*">
+                        {% endif %}
+
+                        <input type="file" class="form-control" id="id_image"
+                               name="image"
+                               accept="image/*">
+                            {% if form.image.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{ form.image.errors }}</div>
+                            {% endif %}
                     </div>
                     <div class="mb-3">
-                        <label for="firstName" class="form-label">First Name*</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
+                        <label for="id_first_name" class="form-label">First Name*</label>
+                        <input type="text" class="form-control" id="id_first_name"
+                               name="first_name"
+                               placeholder="Enter your first name"
+                               value="{{ form.first_name.value }}"
+                               required>
+                            {% if form.first_name.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>
+                            {% endif %}
                     </div>
                     <div class="mb-3">
-                        <label for="lastName" class="form-label">Last Name*</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required>
+                        <label for="id_lastName" class="form-label">Last Name*</label>
+                        <input type="text" class="form-control" id="id_lastName"
+                               name="last_name"
+                               placeholder="Enter your last name"
+                               value="{{ form.last_name.value }}"
+                               required>
+                            {% if form.last_name.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{ form.last_name.errors }}</div>
+                            {% endif %}
                     </div>
                     <div class="mb-3">
-                        <label for="username" class="form-label">Username*</label>
-                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+                        <label for="id_username" class="form-label">Username*</label>
+                        <input type="text" class="form-control" id="id_username"
+                               name="username"
+                               placeholder="Enter your username"
+                               value="{{ form.username.value }}"
+                               required>
+                            {% if form.username.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{ form.username.errors }}</div>
+                            {% endif %}
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email*</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                        <label for="id_email" class="form-label">Email*</label>
+                        <input type="email" class="form-control" id="id_email"
+                               name="email"
+                               placeholder="Enter your email"
+                               value="{{ form.email.value }}"
+                               required>
+                            {% if form.email.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{ form.email.errors }}</div>
+                            {% endif %}
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Save</button>
                 </form>
