--- a/templates/includes/notifications.html
+++ b/templates/includes/notifications.html
@@ -4,12 +4,43 @@
 {% if form.non_field_errors %}
 <div class="container mt-4">
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="alert alert-danger alert-dismissible fade show custom-shadow" role="alert">
+        <div class="col-md-8">
+            <div class="alert alert-danger alert-dismissible fade show rounded shadow-custom" role="alert">
                 {{form.non_field_errors}}
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         </div>
     </div>
 </div>
+
 {% endif %}
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'success' %}
+                    <div id="notification-success-{{ loop.index }}" class="position-fixed top-0 start-50 translate-middle-x alert alert-success fade show custom-shadow" role="alert" style="z-index: 9999;">
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        {{ message }}
+                    </div>
+                    {% endif %}
+                    {% if message.tags == 'warning' %}
+                    <div id="notification-warning-{{ loop.index }}" class="position-fixed top-0 start-50 translate-middle-x alert alert-danger fade show custom-shadow" role="alert" style="z-index: 9999;">
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        {{ message }}
+                    </div>
+                    {% endif %}
+                {% endfor %}
+            {% else %}
+            <div id="jq-notification" class="position-fixed top-0 start-50 translate-middle-x alert alert-success fade show custom-shadow" style="display: none; z-index: 9999;" role="alert">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
+
+
