All cart templates were included

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -79,12 +79,14 @@
                 <h3 class="text-center mb-4">Shopping Cart</h3>
                 <div id="cart-items-container">
                     <!-- Cart Markup -->
+                    {% include "carts/includes/included_cart.html" %}
                     <div class="text-end mt-3">
                         <a class="btn btn-primary" href="#">Place Order</a>
                     </div>
                 </div>
             </div>
         </div>
+
         <!-- Orders -->
         <div class="col-md-12">
             <div class="bg-light p-4 mb-5 rounded shadow-sm">
