--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -12,48 +12,84 @@
 {% endblock %}
 
 {% block content %}
-    <!-- Filter Form -->
-    <div class="dropdown mb-2">
-        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Filters
-        </button>
-
-        <form action="{% if request.GET.q %}{% url "catalog:search" %}{% else %}{% url "catalog:index" slug_url %}{% endif %}" method="get" class="dropdown-menu p-4 text-bg-dark">
-            <div class="mb-3">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="on_sale" id="saleCheck" value="on" {% if request.GET.on_sale == 'on' %}checked{% endif %}>
-                    {% if request.GET.q %}
-                        <input type="hidden" name="q" value="{{ request.GET.q }}">
-                    {% endif %}
-                    <label class="form-check-label" for="saleCheck">
-                        Sale Items
-                    </label>
-                </div>
+    <!-- Top Row for Filters and Cart Button -->
+<div class="row mb-2">
+    <!-- Left Side - Filter Form -->
+    <div class="col-md-9">
+        <div class="dropdown">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                Filters
+            </button>
+            <div class="dropdown-menu p-4 text-bg-dark" aria-labelledby="dropdownMenuButton">
+                <form action="{% if request.GET.q %}{% url 'catalog:search' %}{% else %}{% url 'catalog:index' slug_url %}{% endif %}" method="get">
+                    <div class="mb-3">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="on_sale" id="saleCheck" value="on" {% if request.GET.on_sale == 'on' %}checked{% endif %}>
+                            {% if request.GET.q %}
+                                <input type="hidden" name="q" value="{{ request.GET.q }}">
+                            {% endif %}
+                            <label class="form-check-label" for="saleCheck">
+                                Sale Items
+                            </label>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <p class="mb-1">Sort by:</p>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="order_by" id="defaultSort" value="default" {% if request.GET.order_by == 'default' %}checked{% endif %}>
+                            <label class="form-check-label" for="defaultSort">
+                                Default
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="order_by" id="priceLowHigh" value="price" {% if request.GET.order_by == 'price' %}checked{% endif %}>
+                            <label class="form-check-label" for="priceLowHigh">
+                                Price: Low to High
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="order_by" id="priceHighLow" value="-price" {% if request.GET.order_by == '-price' %}checked{% endif %}>
+                            <label class="form-check-label" for="priceHighLow">
+                                Price: High to Low
+                            </label>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Apply</button>
+                </form>
             </div>
-            <div class="mb-3">
-                <p class="mb-1">Sort by:</p>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="order_by" id="defaultSort" value="default" checked {% if request.GET.order_by or request.GET.order_by == 'default' %}checked{% endif %}>
-                    <label class="form-check-label" for="defaultSort">
-                        Default
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="order_by" id="priceLowHigh" value="price" {% if request.GET.order_by == 'price' %}checked{% endif %}>
-                    <label class="form-check-label" for="priceLowHigh">
-                        Price: Low to High
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="order_by" id="priceHighLow" value="-price" {% if request.GET.order_by == '-price' %}checked{% endif %}>
-                    <label class="form-check-label" for="priceHighLow">
-                        Price: High to Low
-                    </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Apply</button>
-        </form>
+        </div>
     </div>
+    <!-- Right Side - Cart Button -->
+    <div class="col-md-3 text-md-end">
+        <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal" style="position: relative;">
+            <i class="bi-cart-fill" style="font-size: 1.25rem;"></i>
+            <span class="badge bg-dark text-white ms-1 rounded-pill" style="position: absolute; top: -10px; right: -10px;">0</span>
+        </button>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <h3 class="text-center mb-4">Your Cart</h3>
+                <div class="container" id="cart-items-container">
+                    <!-- Cart content will be dynamically included here -->
+                </div>
+                <div class="text-end mt-3">
+                    <a class="btn btn-primary" href="#">
+                        Checkout
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
     {% if request.GET.q %}
     <div class="container mt-4">
