--- a/templates/base.html
+++ b/templates/base.html
@@ -74,11 +74,11 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
+                        <a href="{% url 'user:users_cart' %}" class="btn btn-outline-dark">
+                            <i class="bi-cart-fill me-1"></i>Cart <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        </a>
                     </li>
+
                 </ul>
             </div>
         </div>
@@ -98,12 +98,16 @@
             {% block content %}{% endblock %}  <!-- Placeholder for the main content of the page -->
         </div>
     </section>
+
+
+
     <!-- Footer -->
     <footer class="py-5 bg-dark mt-auto">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
         </div>
     </footer>
+
     <!-- Scripts for Bootstrap and theme -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
