--- a/carts/templates/carts/includes/included_cart.html
+++ b/carts/templates/carts/includes/included_cart.html
@@ -1,35 +1,44 @@
 {% load static %}
+{% load carts_tags %}
 
-<div class="card mb-3 text-bg-light custom-shadow">
-    <div class="card-header bg-dark text-white">
-        <h5 class="card-title">Товар</h5>
-    </div>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item bg-light">
-            <div class="row text-center align-items-center">
-                <div class="col">
-                    <div class="input-group">
-                        <button type="button" class="btn btn-outline-dark btn-sm decrement" data-cart-id="" data-cart-change-url="">-</button>
-                        <input type="text" class="form-control form-control-sm number" value="1" readonly>
-                        <button type="button" class="btn btn-outline-dark btn-sm increment" data-cart-id="" data-cart-change-url="">+</button>
+{% user_carts request as carts %}
+
+<div class="card mb-3 text-bg-light shadow-sm">
+    {% for cart in carts %}
+        <div class="card-header bg-dark text-white">
+            <h5 class="card-title">{{ cart.product.name }}</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item bg-light">
+                <div class="row text-center align-items-center">
+                    <div class="col-4 col-md-2">
+                        <div class="input-group input-group-sm">
+                            <button type="button" class="btn btn-outline-dark btn-sm decrement" data-cart-id="{{ cart.id }}" data-cart-change-url="">
+                                <i class="bi bi-dash"></i>
+                            </button>
+                            <input type="text" class="form-control form-control-sm text-center number" value="{{ cart.quantity }}" readonly>
+                            <button type="button" class="btn btn-outline-dark btn-sm increment" data-cart-id="{{ cart.id }}" data-cart-change-url="">
+                                <i class="bi bi-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-3">
+                        <p>x {{ cart.product.sell_price }} =</p>
+                    </div>
+                    <div class="col-4 col-md-3"><strong>{{ cart.products_price }} $</strong></div>
+                    <div class="col-12 col-md-4 mt-3 mt-md-0">
+                        <a href="{% url 'carts:cart_remove' cart.id %}" class="remove-from-cart" data-cart-id="{{ cart.id }}">
+                            <i class="bi bi-trash3-fill" style="font-size: 20px; color: darkred;"></i>
+                        </a>
                     </div>
                 </div>
-                <div class="col">
-                    <p>x 100.00 = </p>
-                </div>
-                <div class="col"><strong>100.00 $</strong></div>
-                <div class="col">
-                    <a href="{% url 'carts:cart_remove' 1 %}" class="remove-from-cart" data-cart-id="">
-                        <i class="bi bi-trash3-fill" style="font-size: 20px; color: darkred;"></i>
-                    </a>
-                </div>
-            </div>
-        </li>
-    </ul>
+            </li>
+        </ul>
+    {% endfor %}
 </div>
-<div class="card mb-3 custom-shadow">
+<div class="card mb-3 shadow-sm">
     <div class="card-footer bg-dark text-white">
-        <p class="float-left">Итого <strong>1</strong> товар(а) на сумму</p>
-        <h4 class="float-right"><strong>100.00 $</strong></h4>
+        <p class="float-start">Total <strong>{{ carts.total_quantity }}</strong> item(s) amounting to</p>
+        <h4 class="float-end"><strong>${{ carts.total_price }}</strong></h4>
     </div>
 </div>
