--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -15,7 +15,7 @@
                         <h2 class="card-title">{{ product.name }}</h2>
                         <p class="card-text"><strong>Price:</strong> {{ product.price }} $</p>
                         <p class="card-text">{{ product.description }}</p>
-                        <a href="#" class="btn btn-dark add-to-cart">Add to cart</a>
+                        <a href="{% url 'carts:cart_add' product.slug %}" class="btn btn-dark add-to-cart">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="imageModal1Label">{{ product.name }}</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
