--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <!-- Favicon and Bootstrap icons -->
     <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+
     <!-- Main CSS file for the theme -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
 </head>
