--- a/users/templates/users/users_cart.html
+++ b/users/templates/users/users_cart.html
@@ -5,15 +5,15 @@
 <div class="row">
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-                <h3 class="text-center mb-4">Корзина</h3>
+            <div class="bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+                <h3 class="text-center mb-4">Cart</h3>
                 <div class="container" id="cart-items-container">
-                    <!-- Разметка корзины -->
-                    {%include "carts/includes/included_cart.html" %}
-                    <!-- Закончилась разметка корзины -->
+                    <!-- Cart markup -->
+                    {% include "carts/includes/included_cart.html" %}
+                    <!-- End of cart markup -->
                 </div>
                 <a class="btn btn-dark" href="../orders/create_order.html">
-                    Оформить заказ
+                    Proceed to Checkout
                 </a>
             </div>
         </div>
