--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load goods_tags %}
+{% load carts_tags %}
+
+
+
 
 {% block title %}{{ context }}{% endblock %}
 
@@ -15,80 +19,85 @@
     <!-- Top Row for Filters and Cart Button -->
 <div class="row mb-2">
     <!-- Left Side - Filter Form -->
-    <div class="col-md-9">
-        <div class="dropdown">
-            <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                Filters
-            </button>
-            <div class="dropdown-menu p-4 text-bg-dark" aria-labelledby="dropdownMenuButton">
-                <form action="{% if request.GET.q %}{% url 'catalog:search' %}{% else %}{% url 'catalog:index' slug_url %}{% endif %}" method="get">
-                    <div class="mb-3">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="on_sale" id="saleCheck" value="on" {% if request.GET.on_sale == 'on' %}checked{% endif %}>
-                            {% if request.GET.q %}
-                                <input type="hidden" name="q" value="{{ request.GET.q }}">
-                            {% endif %}
-                            <label class="form-check-label" for="saleCheck">
-                                Sale Items
-                            </label>
+    <nav class="navbar">
+        <div class="col-md-9">
+            <div class="dropdown">
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                    Filters
+                </button>
+                <div class="dropdown-menu p-4 text-bg-dark" aria-labelledby="dropdownMenuButton">
+                    <form action="{% if request.GET.q %}{% url 'catalog:search' %}{% else %}{% url 'catalog:index' slug_url %}{% endif %}" method="get">
+                        <div class="mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="on_sale" id="saleCheck" value="on" {% if request.GET.on_sale == 'on' %}checked{% endif %}>
+                                {% if request.GET.q %}
+                                    <input type="hidden" name="q" value="{{ request.GET.q }}">
+                                {% endif %}
+                                <label class="form-check-label" for="saleCheck">
+                                    Sale Items
+                                </label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3">
-                        <p class="mb-1">Sort by:</p>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="order_by" id="defaultSort" value="default" {% if request.GET.order_by == 'default' %}checked{% endif %}>
-                            <label class="form-check-label" for="defaultSort">
-                                Default
-                            </label>
+                        <div class="mb-3">
+                            <p class="mb-1">Sort by:</p>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="order_by" id="defaultSort" value="default" {% if request.GET.order_by == 'default' %}checked{% endif %}>
+                                <label class="form-check-label" for="defaultSort">
+                                    Default
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="order_by" id="priceLowHigh" value="price" {% if request.GET.order_by == 'price' %}checked{% endif %}>
+                                <label class="form-check-label" for="priceLowHigh">
+                                    Price: Low to High
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="order_by" id="priceHighLow" value="-price" {% if request.GET.order_by == '-price' %}checked{% endif %}>
+                                <label class="form-check-label" for="priceHighLow">
+                                    Price: High to Low
+                                </label>
+                            </div>
                         </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="order_by" id="priceLowHigh" value="price" {% if request.GET.order_by == 'price' %}checked{% endif %}>
-                            <label class="form-check-label" for="priceLowHigh">
-                                Price: Low to High
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="order_by" id="priceHighLow" value="-price" {% if request.GET.order_by == '-price' %}checked{% endif %}>
-                            <label class="form-check-label" for="priceHighLow">
-                                Price: High to Low
-                            </label>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Apply</button>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Right Side - Cart Button -->
-    <div class="col-md-3 text-md-end">
-        <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal" style="position: relative;">
-            <i class="bi-cart-fill" style="font-size: 1.25rem;"></i>
-            <span class="badge bg-dark text-white ms-1 rounded-pill" style="position: absolute; top: -10px; right: -10px;">0</span>
-        </button>
-    </div>
-</div>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Your Cart</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <h3 class="text-center mb-4">Items in Your Cart</h3>
-                <div id="cart-items-container">
-                    <!-- Cart content will be dynamically included here -->
-                    {% include "carts/includes/included_cart.html" %}
+                        <button type="submit" class="btn btn-primary">Apply</button>
+                    </form>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Continue Shopping</button>
-                <a class="btn btn-primary" href="#">Checkout</a>
+        </div>
+    <!-- Right Side - Cart Button -->
+
+        <div class="col-md-3 text-md-end">
+            <button type="button" class="btn btn-outline-dark ms-auto" data-bs-toggle="modal" data-bs-target="#exampleModal" style="position: relative;">
+                <i class="bi-cart-fill" style="font-size: 1.25rem;"></i>
+                <span class="badge bg-dark ms-1 rounded-pill">{{ carts.total_quantity }}</span>
+            </button>
+        </div>
+    </nav>
+    </nav>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Your Cart</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h3 class="text-center mb-4">Items in Your Cart</h3>
+                    <div id="cart-items-container">
+                        <!-- Cart content will be dynamically included here -->
+                        {% include "carts/includes/included_cart.html" %}
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Continue Shopping</button>
+                    <a class="btn btn-primary" href="#">Checkout</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
